kubernetes/suivi-depense-budg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suivi-depense-budg-service
spec:
  selector:
    app: suivi-depense-budg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
